<resources>
    <string name="app_name">GoGoPharmacy</string>
    <string name="new_user_sign_up">Don\'t have an account? \nOpen an Account</string>
    <string name="welcome_back">Welcome Back,\nSign in to continue.</string>
    <string name="sign_in_to_continue"></string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_txt_login">LogIn</string>
    <string name="ContentDescription_img">Img</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="complete_address">Complete Address</string>
    <string name="shop_name">Shop Name</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="select_category">Category</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>

    <string-array name="Category">
        <item>Children and maternity</item>
        <item>Body care</item>
        <item>Cough and cold</item>
        <item>Eye,ear and nose</item>
        <item>First aid</item>

    </string-array>


</resources>