<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LogIn">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/LogIn_WelcomeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/almarai_bold"
            android:text="@string/welcome_back"
            android:textAllCaps="true"
            android:textColor="@color/secondary_500"
            android:textSize="20sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Input_Email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTxt_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Input_Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_marginTop="5dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/third_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTxt_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Btn_LogIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:onClick="LogInClick"
            android:text="@string/btn_txt_login" />

        <TextView
            android:id="@+id/Tv_SignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/almarai_bold"
            android:gravity="center"
            android:onClick="SignUpClick"
            android:text="@string/new_user_sign_up"
            android:textColor="@color/secondary_500"
            android:textSize="14sp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-40dp"
        android:background="@drawable/ic_wave">

        <ImageView
            android:id="@+id/image_sty"
            android:layout_width="400dp"
            android:layout_height="350dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/ContentDescription_img"
            android:src="@drawable/p1" />

    </RelativeLayout>


</LinearLayout>