<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".RegisterCustomer">


    <ImageButton
        android:id="@+id/btn_Back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:contentDescription="@string/ContentDescription_img"
        android:onClick="onBackClick"
        android:src="@drawable/ic_arrow_back" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:background="@color/white"
        android:contentDescription="@string/ContentDescription_img"
        android:onClick="onGetCurrentLocationClick"
        android:src="@drawable/ic_my_location" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ci_UserImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/btn_Back"
        android:layout_centerHorizontal="true"
        android:onClick="onProfileImageClick"
        android:src="@drawable/profile"
        app:civ_border_overlay="false"/>

    <LinearLayout
        android:id="@+id/linear_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ci_UserImage"
        android:orientation="vertical"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txl_FullName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_FullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="5dp"
                android:drawableTint="@color/primary_200"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txl_Phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="5dp"
                android:drawableTint="@color/primary_200"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txl_Email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txl_Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/third_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:drawableTint="@color/primary_200"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linear_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txl_Country"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="@integer/material_motion_duration_short_1"
                android:hint="@string/country">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_Country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/primary_200"
                    android:inputType="textPostalAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txl_State"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="@integer/material_motion_duration_short_1"
                android:hint="@string/state">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_State"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/primary_200"
                    android:inputType="textPostalAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txl_City"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="@integer/material_motion_duration_short_1"
                android:hint="@string/city">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_City"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/primary_200"
                    android:inputType="textPostalAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txl_CompleteAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/material_motion_duration_short_1"
            android:hint="@string/complete_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_CompleteAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="5dp"
                android:drawableTint="@color/primary_200"
                android:inputType="textPostalAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_Register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:onClick="onRegisterClick"
            android:text="Register" />

    </LinearLayout>

    <TextView
        android:id="@+id/Tv_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_1"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/almarai_bold"
        android:gravity="center"
        android:onClick="SignUpAsPharmacist"
        android:text="Are You a Pharmacist? Register as Pharmacist"
        android:textColor="@color/secondary_500"
        android:textSize="14sp" />


</RelativeLayout>