<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".RegisterPharmacy">

    <ImageButton
        android:id="@+id/btn_Back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:contentDescription="@string/ContentDescription_img"
        android:onClick="onBackClick"
        android:src="@drawable/ic_arrow_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_Back">

        <RelativeLayout
            android:id="@+id/rl_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ci_UserImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/ContentDescription_img"
                android:onClick="onProfileImageClick"
                android:src="@drawable/profile"
                app:civ_border_overlay="false" />

            <LinearLayout
                android:id="@+id/linear_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ci_UserImage"
                android:orientation="vertical"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txl_FullName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/full_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_FullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="5dp"
                        android:drawableTint="@color/primary_200"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txl_ShopName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/shop_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_ShopName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_store"
                        android:drawablePadding="5dp"
                        android:drawableTint="@color/primary_200"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txl_DeliveryFee"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/delivery_fee"
                    app:counterMaxLength="2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_DeliveryFee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_delivery"
                        android:drawablePadding="5dp"
                        android:drawableTint="@color/primary_200"
                        android:inputType="number"
                        android:maxLength="2" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txl_Phone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/phone_number"
                    app:counterMaxLength="10">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_Phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_phone"
                        android:drawablePadding="5dp"
                        android:drawableTint="@color/primary_200"
                        android:inputType="phone"
                        android:maxLength="10" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txl_Email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hint_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_Email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_mail"
                        android:drawablePadding="5dp"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txl_Password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hint_password"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/third_700">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="5dp"
                        android:drawableTint="@color/primary_200"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/btn_CurrentLocation"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:background="@color/white"
                    android:contentDescription="@string/ContentDescription_img"
                    android:onClick="onGetCurrentLocationClick"
                    android:src="@drawable/ic_my_location" />

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txl_City"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_City"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_location"
                        android:drawablePadding="5dp"
                        android:drawableTint="@color/primary_200"
                        android:inputType="textPostalAddress" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txl_CompleteAddress"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/material_motion_duration_short_1"
                    android:hint="@string/complete_address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_CompleteAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_location"
                        android:drawablePadding="5dp"
                        android:drawableTint="@color/primary_200"
                        android:inputType="textPostalAddress|textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_Register"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="6dp"
                    app:cornerRadius="10dp"
                    android:onClick="onRegisterClick"
                    android:text="Register" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>