<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".PharmacyAddProduct">

    <ImageButton
        android:id="@+id/btn_Back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:contentDescription="@string/ContentDescription_img"
        android:onClick="onBackClick"
        android:src="@drawable/ic_arrow_back" />

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/medicine" />

    <Button
        android:id="@+id/btn_add_image"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_product"
        android:layout_centerHorizontal="true"
        android:text="Add Image"
        android:onClick="onAddProductImage"
        android:textAllCaps="false"
        app:cornerRadius="10dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_add_image">

        <LinearLayout
            android:id="@+id/linear_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_product"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txl_ProductName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/product_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_ProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_medical_"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/primary_200"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txl_ProductDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/product_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_ProductDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_description"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/primary_200"
                    android:inputType="textMultiLine|textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txl_ProductCategory"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/select_category">

                <AutoCompleteTextView
                    android:id="@+id/actv_ProductCategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_list"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/primary_200"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txl_ProductPrice"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_ProductPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_price"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/primary_200"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/sw_Discount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/almarai_bold"
                android:text="Discount" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txl_DiscountPrice"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Discount Price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_DiscountPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_price"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/primary_200"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txl_DiscountTotalPercent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Discount Total Percent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_DiscountTotalPercent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_price"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/primary_200"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txl_FinalPrice"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Price After Discount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_FinalPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_price"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/primary_200"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="add product"
                android:onClick="onAddProduct"
                app:cornerRadius="10dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>